--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sayali",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "pug": "^3.0.2"
   }
 }
